# spt_etc_webapp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  app.py  build_container.sh  pyproject.toml  requirements.txt  requirements_all.txt
.github/workflows/: codacy.yml  codeql.yml
docs/: mkdocs.yml
docs/docs/: contact.md  exec.md  index.md  inputs.md  issues.md  outputs.md
docs/docs/stylesheets/: extra.css
pfs_etc_web/: main.py  pfs_etc_widgets.py  pn_app.py
pfs_etc_web/pfs_etc_actions/: __init__.py  actions.py
pfs_etc_web/pfs_etc_calc/: pfs_etc_calc.py
pfs_etc_web/pfs_etc_params/: __init__.py  params.py
pfs_etc_web/pfs_etc_plots/: __init__.py  create_plots.py
pfs_etc_web/pfs_etc_widgets/: __init__.py  button.py  environment.py  instrument.py  plots.py  target.py  telescope.py
pfs_etc_web/templates/: base.html
src/pfs_etc_web/: main.py  pfs_etc_params.py  pfs_etc_plots.py  pfs_etc_specsim.py  pfs_etc_spectemplates.py  pfs_etc_utils.py  pfs_etc_widgets.py  pn_app.py
src/pfs_etc_web/bak/pfs_etc_actions/: __init__.py
src/pfs_etc_web/bak/pfs_etc_calc/: __init__.py  pfs_etc_calc.py
src/pfs_etc_web/bak/pfs_etc_params/: __init__.py  params.py
src/pfs_etc_web/bak/pfs_etc_widgets/: button.py  environment.py  instrument.py  target.py  telescope.py
src/pfs_etc_web/cli/: clean_outputs.py  run_panel_server.py
src/pfs_etc_web/pfs_etc_plots/: __init__.py  create_plots.py
src/pfs_etc_web/spectemplates/: README.md  generate_spectemplates.py  plot_spectemplates.py  test_ssp1gyr.csv
src/pfs_etc_web/spectemplates/input/: Ebi1.30Zp0.00T01.0000_iPp0.00_baseFe_linear_FWHM_variable  Ech1.30Zp0.00T00.1000_iPp0.00_baseFe.fits  Ech1.30Zp0.00T01.0000_iPp0.00_baseFe.fits  Ech1.30Zp0.00T10.0000_iPp0.00_baseFe.fits  elliptical_swire_13gyr.fits  elliptical_swire_2gyr.fits  optical_nir_qso_sed_001.fits  spiral_swire_sa.fits
src/pfs_etc_web/spectemplates/input/swire_stsci/: AA_README_SWIRE  elliptical_swire_5gyr.fits  spiral_swire_s0.fits  spiral_swire_sb.fits  spiral_swire_sc.fits  spiral_swire_sd.fits  spiral_swire_sdm.fits
src/pfs_etc_web/spectemplates/output/: a0v.fits  g2v.fits  galaxy_poststarburst.fits  galaxy_quiescent.fits  galaxy_starforming.fits  galaxy_swire_elliptical_13gyr.fits  galaxy_swire_elliptical_2gyr.fits  galaxy_swire_elliptical_5gyr.fits  galaxy_swire_spiral_s0.fits  galaxy_swire_spiral_sa.fits  galaxy_swire_spiral_sb.fits  galaxy_swire_spiral_sc.fits  galaxy_swire_spiral_sd.fits  galaxy_swire_spiral_sdm.fits  quasar.fits  star_a0v.fits  star_b0v.fits  star_f0v.fits  star_g2v.fits  star_k0iii.fits  star_k0v.fits  star_m0iii.fits  star_m0v.fits
src/pfs_etc_web/templates/: base.html  base2.html  base_first.html  basic_login_template.html
