[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "ipython>=8.9.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.2",
    "pip>=23.0",
    "ruff>=0.0.239",
    "pyright>=1.1.291",
    "isort>=5.12.0",
    "specutils>=1.10.0",
]

[project]
name = "pfs_etc_web"
version = "0.1.0"
description = ""
authors = [{ name = "Masato Onodera", email = "monodera@naoj.org" }]
dependencies = [
    "panel>=1",
    "astropy>=5.2.1",
    "jinja2>=3.1.2",
    "logzero>=1.7.0",
    "matplotlib>=3.6.3",
    "myst-parser>=1.0.0",
    "numpy>=1.24.1",
    "pandas>=1.5.3",
    "setuptools==56.1.0",
    "synphot>=1.2.0",
    "pfsspecsim @ git+https://github.com/Subaru-PFS/spt_ExposureTimeCalculator.git@u/monodera/20230116",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
fastapi = ["fastapi>=0.89.1", "uvicorn[standard]>=0.20.0", "gunicorn>=20.1.0"]
mkdocs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.14",
    "mkdocs-macros-plugin>=0.7.0",
    "fontawesome-markdown @ https://github.com/bmcorser/fontawesome-markdown/archive/master.zip",
]

[project.scripts]
run_pfs_etc_web = "pfs_etc_web.cli.run_panel_server:main"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.setuptools]
package-dir = { "" = "src" }


# [tool.ruff]
# ignore-init-module-imports = true
# unfixable = ["F401"]
