[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.12.0",
    "ipython>=8.9.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.2",
    "pip>=23.0",
    "ruff>=0.0.239",
    "pyright>=1.1.291",
    "isort>=5.12.0",
    "specutils>=1.10.0",
]

[project]
name = "pfs_etc_web"
dynamic = ["version"]
description = ""
authors = [{ name = "Masato Onodera", email = "monodera@naoj.org" }]
dependencies = [
    "panel>=1.2",
    "astropy>=5.2.1",
    "jinja2>=3.1.2",
    "logzero>=1.7.0",
    "matplotlib>=3.6.3",
    "myst-parser>=1.0.0",
    "numpy>=1.24.1",
    "pandas>=1.5.3",
    "setuptools>=56.1.0",
    "synphot>=1.2.0",
    "pfsspecsim @ git+https://github.com/Subaru-PFS/spt_ExposureTimeCalculator.git@u/monodera/20230116",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.89.1", "uvicorn[standard]>=0.20.0", "gunicorn>=20.1.0"]
mkdocs = [
    "mkdocs>=1.4.3",
    "mkdocs-material>=9.1.14",
    "mkdocs-macros-plugin>=0.7.0",
    "fontawesome-markdown @ https://github.com/bmcorser/fontawesome-markdown/archive/master.zip",
    "mkdocs-video>=1.5.0",
]

[project.scripts]
run_pfs_etc_web = "pfs_etc_web.cli.run_panel_server:main"

[tool.pdm.scripts]
serve-doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
build-doc = { shell = "cd docs && mkdocs build", help = "Build documentation" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pfs_etc_web.__version__" }

# [tool.ruff]
# ignore-init-module-imports = true
# unfixable = ["F401"]

[tool.black]
# line-length = 120
target-version = ["py39", "py310", "py311"]
